fullblown code refactor, implemented stream and operators simulations

--- a/libs/stream/src/lib/data/data.component.scss
+++ b/libs/stream/src/lib/data/data.component.scss
@@ -1,8 +1,13 @@
 :host {
-  .circle {
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+
+
+  .line {
+    width: 10px;
+    border: 1px solid;
+    height: 1px;
+    background-color: black;
+    align-self: center;
   }
 }
-
