code cleanup, style files cleanup, english translations, example usages

--- a/libs/stream/src/lib/stream-wrapper/stream-wrapper.component.scss
+++ b/libs/stream/src/lib/stream-wrapper/stream-wrapper.component.scss
@@ -16,4 +16,10 @@
   arges-stream {
     width: 100%;
   }
+
+  .description-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
